# bsvibe-python

./: .gitignore  LICENSE  README.md  pyproject.toml
.agent/: progress.txt  tasks.json
.github/workflows/: ci.yml
docs/e2e/: bsvibe-alerts-checklist.md  cli-login-device-flow-checklist.md
tests/: test_workspace_smoke.py
